# WindDeskTool

./: .gitignore  CMakeLists.txt  README.md  README_en.md
main/: CMakeLists.txt  centralwidget.cpp  centralwidget.h  mainwindow.cpp  mainwindow.h  pluginmanager.cpp  pluginmanager.h
plugin/test/: CMakeLists.txt  test.cpp  test.h  testwidget.cpp
plugin/test2/: CMakeLists.txt  test.cpp  test.h  testwidget.cpp  testwidget.h
public/: CMakeLists.txt  interface.h  publicinfomanager.cpp  publicinfomanager.h
